--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@skills-matrix/types": "file:../types",
+    "@typed-web-api/nestjs": "^1.1.3",
     "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
