--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main"
+    "start:prod": "node dist/main",
+    "test": "cucumber-js --require-module ts-node/register --require 'src/**/*.cucumber.ts' 'src/**/*.feature'"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,10 +26,13 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^12.3.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@types/chai": "^5.2.3",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "chai": "^6.2.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
